--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -53,10 +53,10 @@ edit_message = true
 
 [UI]
 # Name of the assistant.
-name = "Assistant"
+name = "Beeg"
 
 # Description of the assistant. This is used for HTML tags.
-# description = ""
+description = "your AI assistant for data processing tasks!"
 
 # Large size content are by default collapsed for a cleaner ui
 default_collapse_content = true
@@ -76,7 +76,7 @@ cot = "full"
 # custom_js = "/public/test.js"
 
 # Specify a custom font url.
-# custom_font = "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+custom_font = "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
 
 # Specify a custom meta image url.
 # custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
@@ -89,19 +89,19 @@ cot = "full"
 [UI.theme]
     default = "dark"
     #layout = "wide"
-    #font_family = "Inter, sans-serif"
+    font_family = "Inter, sans-serif"
 # Override default MUI light theme. (Check theme.ts)
 [UI.theme.light]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#eee"
+    paper = "#FFFFFF"
 
     [UI.theme.light.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        main = "#f5a50e"
+        dark = "#d39011"
+        light = "#FFE7EB"
     [UI.theme.light.text]
-        #primary = "#212121"
-        #secondary = "#616161"
+        primary = "#212121"
+        secondary = "#616161"
 
 # Override default MUI dark theme. (Check theme.ts)
 [UI.theme.dark]
@@ -109,9 +109,9 @@ cot = "full"
     #paper = "#FFFFFF"
 
     [UI.theme.dark.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        main = "#f5a50e"
+        dark = "#d39011"
+        light = "#FFE7EB"
     [UI.theme.dark.text]
         #primary = "#EEEEEE"
         #secondary = "#BDBDBD"
