--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -14,6 +14,7 @@ cache = false
 
 # Authorized origins
 allow_origins = ["*"]
+transports = ["websocket"]
 
 # Follow symlink for asset mount (see https://github.com/Chainlit/chainlit/issues/317)
 # follow_symlink = false
